# OS

./: .gitattributes  .gitignore  Cargo.toml  HOSTING.md  README.md  RUN.md  _common.ps1  build.gradle.kts  build.ps1  clean.ps1  proguard.map  proguard.pro  run-client-java.ps1  run-client-rust.ps1  run-client-wasm.ps1  run-jaged.ps1  run-server-gui.ps1  run-server.ps1  settings.gradle.kts
.github/workflows/: build.yaml  ci.yml  client-login.yml  pages.yml
Content/_master/: _meta.json
Content/bases/: _meta.json
Content/binary/: _meta.json
Content/clientscripts/: _meta.json  script_0.cs2  script_1.cs2  script_10.cs2  script_100.cs2  script_101.cs2  script_102.cs2  script_103.cs2  script_104.cs2  script_105.cs2  script_106.cs2  script_107.cs2  script_108.cs2  script_109.cs2  script_11.cs2  script_110.cs2  script_111.cs2  script_112.cs2  script_113.cs2  script_114.cs2  script_115.cs2  script_116.cs2  script_117.cs2  script_118.cs2  script_119.cs2  script_12.cs2  script_120.cs2  script_121.cs2  script_122.cs2  script_123.cs2  script_124.cs2  script_125.cs2  script_126.cs2  script_127.cs2  script_128.cs2  script_129.cs2  script_13.cs2  script_130.cs2  script_131.cs2  script_132.cs2  (+170 more)
Content/config/: _meta.json
Content/fonts/: _meta.json
Content/interfaces/: 0.if  1.if  10.if  100.if  101.if  102.if  103.if  104.if  105.if  106.if  107.if  108.if  109.if  11.if  110.if  111.if  112.if  113.if  114.if  115.if  116.if  117.if  118.if  119.if  12.if  120.if  121.if  122.if  123.if  124.if  125.if  126.if  127.if  128.if  129.if  13.if  130.if  131.if  132.if  133.if  (+552 more)
Content/jagfx/: _meta.json
Content/jingles/: 0.mid  1.mid  10.mid  100.mid  101.mid  102.mid  103.mid  104.mid  105.mid  106.mid  107.mid  108.mid  109.mid  11.mid  110.mid  111.mid  112.mid  113.mid  114.mid  115.mid  116.mid  117.mid  118.mid  119.mid  12.mid  120.mid  121.mid  122.mid  123.mid  124.mid  125.mid  126.mid  127.mid  128.mid  129.mid  13.mid  130.mid  131.mid  132.mid  133.mid  (+234 more)
Content/maps/: 26_66.jm2  26_69.jm2  26_70.jm2  27_73.jm2  27_77.jm2  27_79.jm2  27_80.jm2  27_81.jm2  27_83.jm2  (+692 more)
cache/: crc_baseline.json  keys.json  main_file_cache.idx0  main_file_cache.idx1  main_file_cache.idx10  main_file_cache.idx11  main_file_cache.idx12  main_file_cache.idx13  main_file_cache.idx14  main_file_cache.idx15  main_file_cache.idx2  main_file_cache.idx255  main_file_cache.idx3  main_file_cache.idx4  main_file_cache.idx5  main_file_cache.idx6  main_file_cache.idx7  main_file_cache.idx8  main_file_cache.idx9
crates/client/: Cargo.toml  build.rs
crates/client/examples/: ogg_check.rs
crates/client/src/: app.rs  client.rs  client_build.rs  client_inv_cache.rs  client_script.rs  debug_depth.rs  debug_opts.rs  friend.rs  game_canvas.rs  game_shell.rs  host.rs  imgui_overlay.rs  interface_loop.rs  interface_render.rs  jag_exception.rs  javconfig.rs  jstring.rs  lib.rs  login.rs  main.rs  mem_report.rs  minimap.rs  namespace.rs  obfuscation.rs  overlays.rs  perf.rs  reflection_checker.rs  scene.rs  script_runner.rs  settings.rs  skills.rs  string_constants.rs  text.rs  title_screen.rs  wasm_libc.rs  wordpack.rs  world_entry.rs
crates/client/src/applet/: game_shell_cache.rs  http_request.rs  mod.rs  privileged_request.rs  sign_link.rs
crates/client/src/config/: enum_type.rs  flo_type.rs  flu_type.rs  idk_type.rs  if_type.rs  inv_type.rs  loc_type.rs  mod.rs  npc_type.rs  obj_type.rs  seq_type.rs  server_active.rs  spot_type.rs  var_bit_type.rs  var_cache.rs  varp_type.rs
crates/client/src/dash3d/: anim_base.rs  anim_frame.rs  anim_frame_set.rs  client_entity.rs  client_loc_anim.rs  client_npc.rs  client_obj.rs  client_player.rs  client_proj.rs  collision_map.rs  ground.rs  loc_change.rs  map_spot_anim.rs  mod.rs  model_lit.rs  model_source.rs  model_unlit.rs  occlude.rs  pix3d.rs  player_model.rs  recols_runescape.rs  scene_capture.rs  scene_dynamic.rs  scene_tile.rs  sprite.rs  texture_manager.rs  world.rs
crates/client/src/datastruct/: chat_link_list.rs  chat_linkable.rs  hash_table.rs  int_hash_table.rs  link_list.rs  link_list2.rs  linkable.rs  linkable2.rs  lru_cache.rs  mod.rs
crates/client/src/graphics/: mod.rs  pix2d.rs  pix32.rs  pix8.rs  pix_font.rs  pix_font_generic.rs  pix_loader.rs  pix_map.rs
crates/client/src/input/: mod.rs  mouse_tracking.rs  mouse_wheel.rs
crates/client/src/io/: buffered_random_access_file.rs  byte_array_node.rs  byte_array_pool.rs  byte_array_wrapper.rs  bzip2.rs  cache_util.rs  client_stream.rs  data_file.rs  file_on_disk.rs  gzip.rs  isaac.rs  mod.rs  packet.rs  ws_socket.rs
crates/client/src/js5/: js5.rs  js5_loader.rs  js5_net.rs  js5_net_request.rs  js5_net_thread.rs  js5_worker_request.rs  mod.rs
crates/client/src/midi2/: envelope_set.rs  jagex_codec.rs  midi_file.rs  midi_manager.rs  midi_note.rs  midi_parser.rs  midi_player.rs  mod.rs  patch.rs
crates/client/src/present/: gl.rs  mod.rs  scene_gpu.rs  soft.rs
crates/client/src/sound/: bg_sound.rs  decimator.rs  js5_cache.rs  mixer.rs  mod.rs  pcm_player.rs  pcm_stream.rs  pcm_streamable.rs  wave.rs  wave_cache.rs  wave_stream.rs
crates/client/src/sound/jagfx/: envelope.rs  filter.rs  mod.rs  tone.rs
crates/client/src/sound/jagvorbis/: bit.rs  codebook.rs  mapping.rs  mod.rs  residue.rs
crates/client/src/util/: array_util.rs  math_tool.rs  mod.rs  monotonic_time.rs  timer.rs
crates/client/wasm-libc/include/: assert.h  ctype.h  math.h  stdio.h  stdlib.h  string.h
crates/client/web/: build.ps1  index.html
crates/jaged/: Cargo.toml
crates/jaged/src/: archive_bar.rs  browser.rs  client_bridge.rs  cs2_view.rs  details.rs  inspector.rs  interface_view.rs  jagfx_view.rs  main.rs  map_view.rs  model_view.rs  music.rs  pix_bridge.rs  sprite_view.rs  theme.rs  typeinfo.rs  viewport.rs  vorbis_view.rs
crates/os1-engine/: Cargo.toml
crates/os1-engine/src/: lib.rs
crates/panel/: Cargo.toml
crates/panel/src/: main.rs  pix_bridge.rs  scene.rs  worldmap.rs
deploy/: Caddyfile
ref/: obforder.txt
runescript/: README.md  build.gradle.kts  settings.gradle.kts
tools/: drive_client.ps1
(+61180 files in other folders)
