[workspace]
resolver = "3"
members = [
    "crates/datastruct",
    "crates/io",
    "crates/wordenc",
    "crates/cache",
    "crates/protocol",
    "crates/engine",
    "crates/db",
    "crates/server",
    "crates/app",
    "crates/jaged",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
rust-version = "1.95"
license = "MIT"
publish = false

[workspace.dependencies]
datastruct = { path = "crates/datastruct" }
io = { path = "crates/io" }
wordenc = { path = "crates/wordenc" }
cache = { path = "crates/cache" }
protocol = { path = "crates/protocol" }
engine = { path = "crates/engine" }
db = { path = "crates/db" }
server = { path = "crates/server" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
