[package]
name = "jaged"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "jaged"
path = "src/main.rs"

[dependencies]
cache.workspace = true
io.workspace = true
client.workspace = true
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
