[package]
name = "panel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "panel"
path = "src/main.rs"

[dependencies]
server.workspace = true
engine.workspace = true
cache.workspace = true
client.workspace = true
io.workspace = true
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
egui = "0.31"
egui_plot = "0.31"
